# ToyLanguage

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Readme.md
docs/: 01_grammar_and_alphabet.md  02_missing_grammar.md
examples/: basic.toy
src/: CmakeLists.txt
src/lib/: CmakeLists.txt
src/lib/code_generator/: CmakeLists.txt  function.cpp  function.h  number.h  value.h  variable.cpp  variable.h
src/lib/input_parser/: CMakeLists.txt  input_parser.cpp  input_parser.h  input_parser.hh
src/lib/lexical/: CMakeLists.txt  lexical.cpp  lexical.h
src/lib/lexical_checker/: lexical_checker.cpp  lexical_checker.h
src/lib/messages/: CmakeLists.txt  messages.cpp  messages.h
src/lib/module_emmiter/: CMakeLists.txt  module_emmiter.cpp  module_emmiter.h  module_emmiter.hh
src/lib/module_generator/: CmakeLists.txt  module_generator.cpp  module_generator.h
src/lib/module_generator/nodes/: CmakeLists.txt  function.cpp  function.h  number.cpp  value.h
src/lib/syntactic_analysis/: CMakeLists.txt  blocks.cpp  definitions.cpp  expressions.cpp  grammars.cpp  messages.cpp  syntactic_analysis.cpp  syntactic_analysis.h
src/lib/syntax_checker/: syntax_checker.cpp  syntax_checker.h  syntax_checker.hh
src/lib/syntax_tokens/: syntax_tokens.h
src/lib/tokens/: CMakeLists.txt  tokens.cpp  tokens.h
tools/: CmakeLists.txt
tools/example/: CMakeLists.txt  example.cpp
tools/playground/: CMakeLists.txt  playground.cpp
tools/toy/: CMakeLists.txt  input_parser.cpp  toy.cpp
