cmake_minimum_required(VERSION 3.25)
project(ToyLanguage)

set(CMAKE_CXX_STANDARD 17)

include_directories(/usr/local/include)

find_package(LLVM REQUIRED CONFIG)
message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
message("LLVM_INCLUDE_DIRS=${LLVM_INCLUDE_DIRS}")
message("LLVM_DEFINITIONS=${LLVM_DEFINITIONS}")

llvm_map_components_to_libnames(LLVM_LIBS
  XRay
  LibDriver
  DlltoolDriver
  Coverage
  XCoreDisassembler
  XCoreCodeGen
  XCoreDesc
  XCoreInfo
  X86TargetMCA
  X86Disassembler
  X86AsmParser
  X86CodeGen
  X86Desc
  X86Info
  WebAssemblyDisassembler
  WebAssemblyAsmParser
  WebAssemblyCodeGen
  WebAssemblyUtils
  WebAssemblyDesc
  WebAssemblyInfo
  VEDisassembler
  VEAsmParser
  VECodeGen
  VEDesc
  VEInfo
  SystemZDisassembler
  SystemZAsmParser
  SystemZCodeGen
  SystemZDesc
  SystemZInfo
  SparcDisassembler
  SparcAsmParser
  SparcCodeGen
  SparcDesc
  SparcInfo
  RISCVTargetMCA
  RISCVDisassembler
  RISCVAsmParser
  RISCVCodeGen
  RISCVDesc
  RISCVInfo
  PowerPCDisassembler
  PowerPCAsmParser
  PowerPCCodeGen
  PowerPCDesc
  PowerPCInfo
  NVPTXCodeGen
  NVPTXDesc
  NVPTXInfo
  MSP430Disassembler
  MSP430AsmParser
  MSP430CodeGen
  MSP430Desc
  MSP430Info
  MipsDisassembler
  MipsAsmParser
  MipsCodeGen
  MipsDesc
  MipsInfo
  LoongArchDisassembler
  LoongArchAsmParser
  LoongArchCodeGen
  LoongArchDesc
  LoongArchInfo
  LanaiDisassembler
  LanaiCodeGen
  LanaiAsmParser
  LanaiDesc
  LanaiInfo
  HexagonDisassembler
  HexagonCodeGen
  HexagonAsmParser
  HexagonDesc
  HexagonInfo
  BPFDisassembler
  BPFAsmParser
  BPFCodeGen
  BPFDesc
  BPFInfo
  AVRDisassembler
  AVRAsmParser
  AVRCodeGen
  AVRDesc
  AVRInfo
  ARMDisassembler
  ARMAsmParser
  ARMCodeGen
  ARMDesc
  ARMUtils
  ARMInfo
  AMDGPUTargetMCA
  AMDGPUDisassembler
  AMDGPUAsmParser
  AMDGPUCodeGen
  AMDGPUDesc
  AMDGPUUtils
  AMDGPUInfo
  AArch64Disassembler
  AArch64AsmParser
  AArch64CodeGen
  AArch64Desc
  AArch64Utils
  AArch64Info
  OrcJIT
  WindowsDriver
  MCJIT
  JITLink
  Interpreter
  ExecutionEngine
  RuntimeDyld
  OrcTargetProcess
  OrcShared
  DWP
  DebugInfoLogicalView
  DebugInfoGSYM
  Option
  ObjectYAML
  ObjCopy
  MCA
  MCDisassembler
  LTO
  Passes
  CFGuard
  Coroutines
  ipo
  Vectorize
  Linker
  Instrumentation
  FrontendOpenMP
  FrontendOpenACC
  FrontendHLSL
  Extensions
  DWARFLinkerParallel
  DWARFLinker
  GlobalISel
  MIRParser
  AsmPrinter
  SelectionDAG
  CodeGen
  ObjCARCOpts
  IRPrinter
  InterfaceStub
  FileCheck
  FuzzMutate
  Target
  ScalarOpts
  InstCombine
  AggressiveInstCombine
  TransformUtils
  BitWriter
  Analysis
  ProfileData
  Symbolize
  DebugInfoPDB
  DebugInfoMSF
  DebugInfoDWARF
  Object
  TextAPI
  MCParser
  IRReader
  AsmParser
  MC
  DebugInfoCodeView
  BitReader
  FuzzerCLI
  Core
  Remarks
  BitstreamReader
  BinaryFormat
  TargetParser
  TableGen
  Support
  Demangle
)
# execute_process(COMMAND llvm-config --libs all
#                 OUTPUT_VARIABLE LLVM_LIBS)

add_subdirectory(src/lib)
add_subdirectory(tools/toy)
add_subdirectory(tools/example)

include_directories("${CMAKE_CURRENT_LIST_DIR}")

target_link_libraries(Toy ${LLVM_LIBS})
target_link_libraries(Example ${LLVM_LIBS})
